--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,7 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:support-v4:22.2.0'
-    compile files('libs/aspectjrt-1.7.3 (1).jar')
-    compile files('libs/isoparser-1.0.6.jar')
+    implementation'com.android.support:support-v4:22.2.0'
+    implementation files('libs/aspectjrt-1.7.3 (1).jar')
+    implementation files('libs/isoparser-1.0.6.jar')
 }
